tests/rosetta/out/Haskell/abundant-odd-numbers.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/abundant-odd-numbers.hs:166:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/abundant-odd-numbers.hs:159:1
                 /workspace/mochi/tests/rosetta/out/Haskell/abundant-odd-numbers.hs:166:1
    |
166 | main = do
    | ^^^^
